src/objects/Project_Packet_Contact_SOSP__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Last_Activity_Date__c</fullName>
        <formula>Contact__r.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Packet Contacts</relationshipLabel>
        <relationshipName>Project_Packet_Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cope_Pladged__c</fullName>
        <formula>! ISNULL(Contact__r.Cope_Payment_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cope Pledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>June_5_Action__c</fullName>
        <formula>Contact__r.IsJune5Action__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June 5 Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Phone_Bank_Task_Subject__c</fullName>
        <formula>TEXT(Contact__r.Last_Phone_Bank_Task_Subject__c )</formula>
        <label>Last Task Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__r.Project__r.Name</formula>
        <label>ProjectID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectZoneGroupID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__r.Project_Zone_Group__r.Name</formula>
        <label>ProjectZoneGroupID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Packet__c</fullName>
        <label>Project Packet</label>
        <referenceTo>Project_Packet_SOSP__c</referenceTo>
        <relationshipLabel>Project Packet Contacts</relationshipLabel>
        <relationshipName>Project_Packet_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Zone_ID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__c</formula>
        <label>Project Zone ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneID__c</fullName>
        <formula>Project_Packet__r.Project_Zone__r.Zone_p__r.Name</formula>
        <label>ZoneID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone_Group_Coordinator__c</fullName>
        <formula>Project_Packet__r.Project_Zone__r.Zone_Group_Coordinator__c</formula>
        <label>Zone Group Coordinator</label>
        <type>Text</type>
    </fields>
    <label>Project Packet Contact</label>
    <nameField>
        <displayFormat>PPC-{000000}</displayFormat>
        <label>Project Packet Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Packet Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>